{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 23,
  "lineage": "7e23687d-37ea-a5ba-0a3c-bba44fc80015",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_proj_1_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01f79b1e4a5c64257",
            "arn": "arn:aws:ec2:eu-central-1:851454408796:instance/i-09039c10a45a0ee9a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09039c10a45a0ee9a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ec783554c36eed96"
              }
            ],
            "primary_network_interface_id": "eni-0ec783554c36eed96",
            "private_dns": "ip-10-0-1-9.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.9",
            "public_ip": "18.197.106.229",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-007f7c14a20e9c847",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04676babd1f1c47f5",
            "tags": {
              "Name": "Ubuntu Linux EC2"
            },
            "tags_all": {
              "Name": "Ubuntu Linux EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05289f4484e167638",
              "sg-0a8a4643b7b2ffd19"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_sg_python_api",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_proj_1_public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851454408796:internet-gateway/igw-06ce0e7ccd5a7f86d",
            "id": "igw-06ce0e7ccd5a7f86d",
            "owner_id": "851454408796",
            "region": "eu-central-1",
            "tags": {
              "Name": "dev-proj-1-igw"
            },
            "tags_all": {
              "Name": "dev-proj-1-igw"
            },
            "vpc_id": "vpc-07131c5dc689fdd38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_proj_1_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851454408796:route-table/rtb-03acd0a8e3dc3b81d",
            "id": "rtb-03acd0a8e3dc3b81d",
            "owner_id": "851454408796",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "dev-proj-1-private-rt"
            },
            "tags_all": {
              "Name": "dev-proj-1-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07131c5dc689fdd38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_proj_1_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851454408796:route-table/rtb-0538782642d00cbb7",
            "id": "rtb-0538782642d00cbb7",
            "owner_id": "851454408796",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ce0e7ccd5a7f86d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-proj-1-public-rt"
            },
            "tags_all": {
              "Name": "dev-proj-1-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07131c5dc689fdd38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_1_private_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0820514e434639c6c",
            "region": "eu-central-1",
            "route_table_id": "rtb-03acd0a8e3dc3b81d",
            "subnet_id": "subnet-089af55a8f522b412"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.dev_proj_1_private_subnets",
            "module.networking.aws_subnet.dev_proj_1_private_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038554654c4db0c9f",
            "region": "eu-central-1",
            "route_table_id": "rtb-03acd0a8e3dc3b81d",
            "subnet_id": "subnet-044523a5efc3ee165"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.dev_proj_1_private_subnets",
            "module.networking.aws_subnet.dev_proj_1_private_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_1_public_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b7c9bfc08418faf",
            "region": "eu-central-1",
            "route_table_id": "rtb-0538782642d00cbb7",
            "subnet_id": "subnet-04676babd1f1c47f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.networking.aws_route_table.dev_proj_1_public_route_table",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a10cb2ec61312e2",
            "region": "eu-central-1",
            "route_table_id": "rtb-0538782642d00cbb7",
            "subnet_id": "subnet-0d4ced7603b2e9030"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.networking.aws_route_table.dev_proj_1_public_route_table",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_proj_1_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851454408796:subnet/subnet-089af55a8f522b412",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089af55a8f522b412",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851454408796",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "dev-proj-private-subnet-1"
            },
            "tags_all": {
              "Name": "dev-proj-private-subnet-1"
            },
            "vpc_id": "vpc-07131c5dc689fdd38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851454408796:subnet/subnet-044523a5efc3ee165",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044523a5efc3ee165",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851454408796",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "dev-proj-private-subnet-2"
            },
            "tags_all": {
              "Name": "dev-proj-private-subnet-2"
            },
            "vpc_id": "vpc-07131c5dc689fdd38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_proj_1_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851454408796:subnet/subnet-04676babd1f1c47f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04676babd1f1c47f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851454408796",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "dev-proj-public-subnet-1"
            },
            "tags_all": {
              "Name": "dev-proj-public-subnet-1"
            },
            "vpc_id": "vpc-07131c5dc689fdd38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851454408796:subnet/subnet-0d4ced7603b2e9030",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4ced7603b2e9030",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851454408796",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "dev-proj-public-subnet-2"
            },
            "tags_all": {
              "Name": "dev-proj-public-subnet-2"
            },
            "vpc_id": "vpc-07131c5dc689fdd38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_proj_1_vpc_eu_central_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851454408796:vpc/vpc-07131c5dc689fdd38",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ceef486cbfcc8b1b",
            "default_route_table_id": "rtb-08e03903d6c46dac9",
            "default_security_group_id": "sg-07552ce376dbb66ff",
            "dhcp_options_id": "dopt-02ecc81f43c676451",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07131c5dc689fdd38",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e03903d6c46dac9",
            "owner_id": "851454408796",
            "region": "eu-central-1",
            "tags": {
              "Name": "dev-proj-eu-central-vpc-1"
            },
            "tags_all": {
              "Name": "dev-proj-eu-central-vpc-1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_python_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851454408796:security-group/sg-05289f4484e167638",
            "description": "Enable the Port 5000 for python api",
            "egress": [],
            "id": "sg-05289f4484e167638",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "Allow traffic on port 5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "SG for EC2 for enabling port 5000",
            "name_prefix": "",
            "owner_id": "851454408796",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow traffic on port 5000"
            },
            "tags_all": {
              "Name": "Security Groups to allow traffic on port 5000"
            },
            "timeouts": null,
            "vpc_id": "vpc-07131c5dc689fdd38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851454408796:security-group/sg-0a8a4643b7b2ffd19",
            "description": "Enable the Port 22(SSH) \u0026 Port 80(http)",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "Allow outgoing request",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8a4643b7b2ffd19",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "Allow HTTP request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "Allow HTTP request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "Allow remote SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG for EC2 to enable SSH(22) and HTTP(80)",
            "name_prefix": "",
            "owner_id": "851454408796",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-07131c5dc689fdd38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851454408796:security-group/sg-0e5ef66a9006aa3b4",
            "description": "Allow access to RDS from EC2 present in public subnet",
            "egress": [],
            "id": "sg-0e5ef66a9006aa3b4",
            "ingress": [
              {
                "cidr_blocks": ["10.0.1.0/24", "10.0.2.0/24"],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "851454408796",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07131c5dc689fdd38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    }
  ]
}